--- a/config.toml
+++ b/config.toml
@@ -55,3 +55,8 @@ theme = "hugo-hero-theme"
       name = "News"
       url = "/news"
       weight = 4
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
